config/openstack/elektra/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  volumes:
    - name: postgres-persistent-storage
      persistentVolumeClaim:
        claimName: postgres
  containers:
  - name: debug
    image: ubuntu
    securityContext:
      privileged: true
    command:
      - tail
      - -f
      - /dev/null
    volumeMounts:
    - name: postgres-persistent-storage
      mountPath: /postgresql
