config/openstack/elektra/elektra-service.yaml
kind: Service
apiVersion: v1

metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: elektra 
  namespace: elektra 

spec:
  selector:
    name: elektra 
  ports: 
    - port: 80
