config/openstack/elektra/postgres-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: postgres 
  namespace: elektra

spec:
  selector:
    name: postgres 
  ports: 
    - port: 5432
